Separated code into two files

--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript">
-			var gfx = document.getElementById("gfx").getContext("2d");
-
-			Main();
-
-			function Main()
-			{
-
-			}
-		</script>
+		<script src="script.js"></script>
 	</head>
 	<body>
 		<canvas id="gfx" width="500" height="500" style="border: 1px solid #000000;"></canvas>
